syntax = "proto3";

package payment;

option go_package = "./protoc";

message PaymentOrderRequest{
  string order_num = 1;
  int64 order_user_id = 2;
  int64 payment_user_id = 3;
  double prices = 4;
  int64 payment_type = 5;
}

message PaymentOrderResponse{
  int64 states = 1;
  string order_num = 2;
  int64 last_id = 3;
}

message PaymentInfo{
  int64 id = 1;
  string order_num = 2;
  double prices = 3;
  int64 order_user_id = 4;
  int64 payment_user_id = 5;
  int64 payment_type = 6;
  int64 payment_state = 7;
  string update_time = 8;
  string create_time = 9;
}

message getPaymentInfoByOrderNumRequest{
  string order_num = 1;
}

message getPaymentInfoByOrderNumResponse{
  int64 states = 1;
  PaymentInfo payment_info = 2;
}



service payment {
  rpc paymentOrder (PaymentOrderRequest) returns (PaymentOrderResponse);
  rpc getPaymentInfoByOrderNum (getPaymentInfoByOrderNumRequest) returns (getPaymentInfoByOrderNumResponse);
}